Align footer to the bottom of the page

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,10 @@ footer {
   padding: 2rem 0;
   display: flex;
   justify-content: flex-start;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 footer .content {
