Add list items to the home page

--- a/src/style.css
+++ b/src/style.css
@@ -52,19 +52,12 @@ header .container {
   justify-content: space-between;
 }
 
-.logo {
-  width: 10rem;
-  height: 4rem;
-  content: url("./images/tvm-header-logo.png");
-}
-
 footer {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   padding: 2rem 0;
   display: flex;
   justify-content: flex-start;
-  position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
@@ -74,4 +67,82 @@ footer .content {
   padding-left: 10rem;
   font-weight: 700;
   font-size: 18px;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+  flex-wrap: wrap;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.cards .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titles {
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+  margin-right: 55%;
+  margin-top: 1rem;
+  gap: 3rem;
+}
+
+header {
+  padding: 2rem 0;
+  margin-bottom: 2rem;
+}
+
+.ptr {
+  cursor: pointer;
+}
+
+.logo {
+  width: 10rem;
+  height: 4rem;
+  content: url("./images/tvm-header-logo.png");
+}
+
+.title-like {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cards .card-image {
+  width: fit-content;
+  height: auto;
+  text-align: center;
+  display: inline-block;
+}
+
+.cards .card-image img {
+  object-fit: cover;
+}
+
+.card-comments {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+button {
+  height: 40px;
+  border-radius: 3px;
+  border-color: #71c5bb;
+  width: 150px;
+  box-shadow: 5px 5px #71c5bb;
+}
+
+.likes .icon {
+  height: 20px;
+  width: 20px;
+  content: url("./images/heart.png");
 }
